--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,4 +28,4 @@ jobs:
     - name: mystep
       run: |
         python -m venv myenv
-        source venv/bin/activate
+        source myenv/bin/activate
