--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,3 +29,5 @@ jobs:
       run: |
         python -m venv myenv
         source myenv/bin/activate
+        pip install django
+        python manage.py runserver
