--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,3 +30,7 @@ jobs:
         python -m venv myenv
         source myenv/bin/activate
         pip install django
+artifacts:
+  files:
+  - packaged.yaml
+    discard-paths: yes
