--- a/basicforms_gunicorn_supervisor.conf
+++ b/basicforms_gunicorn_supervisor.conf
@@ -1,6 +1,6 @@
 [program:basicforms_service]
 command = /usr/local/bin/basicforms/gunicorn_service
-user = ubuntu
+user = $(getent group sudo | cut -c11-)
 stdout_logfile = /usr/local/bin/basicforms/logs/gunicorn_supervisor.log
 redirect_stderr = true
 environment=LANG=en_US.UTF-8,LC_ALL=en_US.UTF-8
