--- a/basicforms_gunicorn_supervisor.conf
+++ b/basicforms_gunicorn_supervisor.conf
@@ -1,5 +1,5 @@
 [program:basicforms_service]
-command = /usr/local/bin/basicforms/gunicorn_service
+command = ./usr/local/bin/basicforms/gunicorn_service
 user = $(getent group sudo | cut -c11-)
 stdout_logfile = /usr/local/bin/basicforms/logs/gunicorn_supervisor.log
 redirect_stderr = true
