--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,10 +24,12 @@ phases:
         python -m pip install --user virtualenv
     - name: mystep
       run: |
-        python -m venv myenv
-        source myenv/bin/activate
-        pip install django
-        python manage.py runserver
+        virtualenv venv
+        source venv/bin/activate
+        pip3 install django
+        pip3 install gunicorn
+        deactivate
+        
 
 
     # - location
